[package]
name = "seed_hooks_poc"
version = "0.0.1"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.4.0"
wasm-bindgen = "^0.2.45"
web-sys = "^0.3.19"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"
topo = { path = "./moxie/topo" }
once_cell = "1.2.0"
slotmap = "0.4.0"
anymap = { git = "https://github.com/chris-morgan/anymap" }
# reqwest = "0.9.22"
wasm-bindgen-futures = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'