[package]
name = "comp_state"
version = "0.1.0"
authors = ["rebo <rebo@fakeemail.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
topo = { path = "./moxie/topo" }
once_cell = "1.2.0"
slotmap = "0.4.0"
anymap = { git = "https://github.com/chris-morgan/anymap" }

