[package]
name = "seed_hooks_poc"
version = "0.0.1"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.4.0"
wasm-bindgen = "^0.2.45"
web-sys = "^0.3.19" 
# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"
topo = { path = "../comp_state/moxie/topo" }
comp_state = {path = "../comp_state"}
seed_comp_helpers = {path = "../seed_comp_helpers"}
fancy-regex = "0.2.0"
wasm-bindgen-futures = "0.4.2"
js-sys = "0.3.29" 

[dev-dependencies]
wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'