[package]
name = "seed_comp_helpers"
version = "0.1.0"
authors = ["rebo <rebo@fakeemail.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comp_state = {path = "../comp_state"}
topo = { path = "../comp_state/moxie/topo" }
seed = "^0.4.0"
fancy-regex = "0.2.0"