[package]
name = "seed_comp_helpers"
version = "0.1.0"
authors = ["rebo <rebo@fakeemail.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comp_state = {path = "../comp_state"}
topo = { path = "../comp_state/moxie/topo" }
# seed = { path = "../../seed_master" }
seed = "0.4.2"
fancy-regex = "0.2.0"
wasm-bindgen-futures = "0.3.22"
wasm-bindgen = "^0.2.50" 
serde = "1.0.102"
clone_all = "0.1.1"
futures = "^0.1.27"
enclose = "^1.1.6"
serde_json = "1.0.40"
js-sys = "0.3.27"


[dependencies.web-sys]
version = "^0.3.28"
features = [
  "ScrollToOptions",
  "Navigator",
]