[package]
version = "0.1.0"
name = "kavik_cz"
repository = "https://github.com/MartinKavik/kavik.cz"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Personal website kavik.cz"
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = { path = "../../../seed_master" }
# fixed-vec-deque = "0.1.8"
topo = { path = "../../comp_state/moxie/topo" }
comp_state = {path = "../../comp_state"}
seed_comp_helpers = {path = "../../seed_comp_helpers"}
clone_all = "0.1.1"

[dependencies.web-sys]
version = "^0.3.28"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 's'
