[package]
version = "0.1.0"
name = "todo_example"
repository = "n/a"
authors = ["rebo"]
description = "todo example using component state"
categories = ["wasm", "rust", "tailwindcss", "seed", "todo", "example"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = { path = "../../../seed_master" } # Uses a local seed master, however you probably want to use master from github instead
#seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
topo = { path = "../../comp_state/moxie/topo" }
comp_state = {path = "../../comp_state"}
seed_comp_helpers = {path = "../../seed_comp_helpers"}
clone_all = "0.1.1"

[dependencies.web-sys]
version = "^0.3.28"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 's'
